[project]
name = "Python-Project-Scrape-Twitter-Data"
version = "0.0.1"
authors = [
  { name="Ananda Padmanaban", email="anna.shy314@gmail.com" },
]
description = "This project will scrape the Tweeter data for the given Text between the given dates"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"